[package]
name = "AIFinalProject"
version = "0.1.0"
authors = ["Tim Steinberger <tsteinb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
